--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
         color: #E73525;
         text-decoration: none;
         display: inline-block;
+        transition: transform 1s;
+        -webkit-transition: transform 1s;
       }
 
       .links a:hover {
-        transform: rotate(5deg)
+        transform: rotate(5deg);
+        -webkit-transform: rotate(5deg);
       }
     </style>
   </head>
