--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <li><a href="https://twitter.com/wjblankenship">twitter</a></li>
         <li><a href="https://medium.com/@wblankenship">blog</a></li>
         <li><a href="https://github.com/wblankenship">github</a></li>
+        <li><a href="https://drive.google.com/file/d/0B3rOGfh8UcamWjM2QmJJTW85Rms/view?usp=sharing">résumé</a></li>
       </ul>
     </div>
     <div class="name"><a href="mailto:william.jblankenship@gmail.com">Will</a></div>
